--- a/ES6 Projects/16-ES6-slider/setup/styles.css
+++ b/ES6 Projects/16-ES6-slider/setup/styles.css
@@ -248,10 +248,10 @@ h4 {
 /* MORE CSS FOR JS */
 
 .slide-container {
-  display: flex;
+  display: flex; /* Ponemos las Slides en linea*/
   position: relative;
   height: 450px;
-  overflow: hidden;
+  overflow: hidden; /*Para esconder las de afuera (next,prev)*/
 }
 
 .slide {
@@ -261,15 +261,17 @@ h4 {
   width: 100%;
   height: 100%;
   transition: all 0.3s ease-in-out;
-  /* opacity: 0; */
+  /*Hasta aqui todas las Slides estan pisadas, una sobre otra*/
+  opacity: 0; /*Escondemos todas las Slides, solamente mostraremos las next y prev, ademas de active*/
 }
+
 .slide.active {
-  opacity: 1;
-  transform: translateX(0);
+  opacity: 1; /* Para mostrarla a diferencia del Resto*/
+  transform: translateX(0); /*mantiene la posicion*/
 }
 .slide.next {
-  transform: translateX(100%);
+  transform: translateX(100%); /*las movemos a la derecha 100%*/
 }
 .slide.last {
-  transform: translateX(-100%);
+  transform: translateX(-100%); /*a la Izq 100%*/
 }
